Update NGA SP URLs

--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -501,9 +501,9 @@ production:
     agency: 'NGA'
     logo: 'nga.png'
     cert: 'nga_geoworks_prod'
-    return_to_sp_url: 'https://geoworks.geointservices.io'
+    return_to_sp_url: 'https://geoworks.nga-geoworks.com'
     redirect_uris:
-      - 'https://geoworks.geointservices.io/auth/login-gov/callback/loa-1'
+      - 'https://geoworks.nga-geoworks.com/auth/login-gov/callback/loa-1'
     restrict_to_deploy_env: 'prod'
 
   # NGA GEOINT Viewer
@@ -513,9 +513,9 @@ production:
     agency: 'NGA'
     logo: 'nga.png'
     cert: 'nga_geoint_viewer_prod'
-    return_to_sp_url: 'https://gv-geoworks.geointservices.io'
+    return_to_sp_url: 'https://gv-geoworks.nga-geoworks.com'
     redirect_uris:
-      - 'https://gv-geoworks.geointservices.io/protected/callback'
+      - 'https://gv-geoworks.nga-geoworks.com/protected/callback'
     restrict_to_deploy_env: 'prod'
 
   # NGA HiPER CLOUD
@@ -525,8 +525,8 @@ production:
     agency: 'NGA'
     logo: 'nga.png'
     cert: 'nga_hiper_look_prod'
-    return_to_sp_url: 'https://hiperlook-ppp.geointservices.io/'
+    return_to_sp_url: 'https://hiperlook-ppp.nga-geoworks.com'
     redirect_uris:
-      - 'https://hiperlook-ppp.geointservices.io/auth_redirect'
-      - 'https://hiperlook-ppp.geointservices.io:443/auth_redirect'
+      - 'https://hiperlook-ppp.nga-geoworks.com/auth_redirect'
+      - 'https://hiperlook-ppp.nga-geoworks.com:443/auth_redirect'
     restrict_to_deploy_env: 'prod'
