--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -278,16 +278,16 @@ Style/TrailingCommaInArguments:
     - consistent_comma
     - no_comma
 
-Style/TrailingCommaInLiteral:
-  # If `comma`, the cop requires a comma after the last item in an array or
-  # hash, but only when each item is on its own line.
-  # If `consistent_comma`, the cop requires a comma after the last item of all
-  # non-empty array and hash literals.
-  EnforcedStyleForMultiline: comma
-  SupportedStylesForMultiline:
-    - comma
-    - consistent_comma
-    - no_comma
+# Style/TrailingCommaInLiteral:
+#   # If `comma`, the cop requires a comma after the last item in an array or
+#   # hash, but only when each item is on its own line.
+#   # If `consistent_comma`, the cop requires a comma after the last item of all
+#   # non-empty array and hash literals.
+#   EnforcedStyleForMultiline: comma
+#   SupportedStylesForMultiline:
+#     - comma
+#     - consistent_comma
+#     - no_comma
 
 Style/SingleLineBlockParams:
   Enabled: false
