Update Rubocop version to 0.54, fix linting, update rules
**WHY**
- To use the latest and greatest Rubocop that Code Climate supports
- `Naming/MemoizedInstanceVariableName` is disabled to allow for instance variables prefixed with `_`
- `Naming/UncommunicativeMethodParamName` is set to `2` to support keyword argument name `sp`
- `Style/ExpandPathArguments` is disabled to not change the `File.expand_path` calls but we may want to revisit

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -302,3 +302,12 @@ Style/TrailingCommaInHashLiteral:
 
 Style/SingleLineBlockParams:
   Enabled: false
+
+Naming/MemoizedInstanceVariableName:
+  Enabled: false
+
+Naming/UncommunicativeMethodParamName:
+  MinNameLength: 2
+
+Style/ExpandPathArguments:
+  Enabled: false
