--- a/deploy/build
+++ b/deploy/build
@@ -8,9 +8,20 @@
 
 set -euo pipefail
 
+run() {
+    echo >&2 "+ $*"
+    "$@"
+}
+
 echo "deploy/build starting"
 echo "HOME: ${HOME-}"
 cd "$(dirname "$0")/.."
+
+export IDP_SIDEKIQ_PRO=1
+
+# enable sidekiq pro
+sidekiq_license="$(run aws secretsmanager get-secret-value --secret-id common/idp/sidekiq-license --query SecretString --output text)"
+bundle config enterprise.contribsys.com "$sidekiq_license"
 
 set -x
 
