Enable sidekiq pro reliable delivery.
**Why**: Enabling reliable delivery allows us to not drop jobs when
worker instances explode.

--- a/deploy/build
+++ b/deploy/build
@@ -19,6 +19,10 @@ cd "$(dirname "$0")/.."
 
 export IDP_SIDEKIQ_PRO=1
 
+# secrets manager requires region to be set
+az="$(run ec2metadata --availability-zone)"
+export AWS_DEFAULT_REGION="${az::-1}"
+
 # enable sidekiq pro
 sidekiq_license="$(run aws secretsmanager get-secret-value --secret-id common/idp/sidekiq-license --query SecretString --output text)"
 bundle config enterprise.contribsys.com "$sidekiq_license"
