Fix sidekiq license path.

--- a/deploy/build
+++ b/deploy/build
@@ -24,7 +24,7 @@ az="$(run ec2metadata --availability-zone)"
 export AWS_DEFAULT_REGION="${az::-1}"
 
 # enable sidekiq pro
-sidekiq_license="$(run aws secretsmanager get-secret-value --secret-id common/idp/sidekiq-license --query SecretString --output text)"
+sidekiq_license="$(run aws secretsmanager get-secret-value --secret-id global/idp/sidekiq-pro --query SecretString --output text)"
 bundle config enterprise.contribsys.com "$sidekiq_license"
 
 set -x
