LG-229 Add reCAPTCHA to account creation and password reset screens
**Why**: To prevent bots from creating accounts or abusing the mail system.

**How**: By incorporating the recaptcha gem (invisible option) and logging three conditions upon submit: captcha valid, captcha sent (the user can click on the page to make the captcha disappear), and captcha enabled (our system level toggle).

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -124,6 +124,9 @@ development:
   profile_proofing_vendor: 'mock'
   rack_mini_profiler: 'off'
   reauthn_window: '120'
+  recaptcha_enabled_percent: '10'
+  recaptcha_site_key: 'key1'
+  recaptcha_secret_key: 'key2'
   redis_url: 'redis://localhost:6379/0'
   redis_throttle_url: 'redis://localhost:6379/1'
   remember_device_expiration_days: '30'
@@ -212,6 +215,9 @@ production:
   phone_proofing_vendor: 'mock'
   profile_proofing_vendor: 'mock'
   reauthn_window: '120'
+  recaptcha_enabled_percent: '10'
+  recaptcha_site_key: 'key1'
+  recaptcha_secret_key: 'key2'
   redis_url: 'redis://redis.login.gov.internal:6379'
   redis_throttle_url: 'redis://redis.login.gov.internal:6379/1'
   remember_device_expiration_days: '30'
@@ -301,6 +307,9 @@ test:
   phone_proofing_vendor: 'mock'
   profile_proofing_vendor: 'mock'
   reauthn_window: '120'
+  recaptcha_enabled_percent: '10'
+  recaptcha_site_key: 'key1'
+  recaptcha_secret_key: 'key2'
   redis_url: 'redis://localhost:6379/0'
   redis_throttle_url: 'redis://localhost:6379/1'
   remember_device_expiration_days: '30'
