[LG-190] share certificate subject with SPs
**Why**:
Some SPs need to know the proofed identity of the user as
attested by their PIV/CAC certificate.

**How**:
We save the certificate subject to the encrypted user
session so it's available for the OIDC/SAML callbacks
from the SP.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -46,6 +46,7 @@ Metrics/BlockLength:
     - 'app/services/omniauth_authorizer.rb'
     - 'app/services/single_logout_handler.rb'
     - 'app/services/pii/attributes.rb'
+    - 'app/services/x509/attributes.rb'
     - 'config/environments/*.rb'
     - 'config/initializers/secure_headers.rb'
     - 'config/routes.rb'
