--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -90,6 +90,7 @@ development:
   database_statement_timeout: '2500'
   database_timeout: '5000'
   database_username: ''
+  disallow_all_web_crawlers: 'true'
   domain_name: 'localhost:3000'
   enable_identity_verification: 'true'
   enable_rate_limiting: 'false'
@@ -183,6 +184,7 @@ production:
   disable_email_sending: 'false'
   dashboard_api_token:
   database_statement_timeout: '2500'
+  disallow_all_web_crawlers: 'false'
   domain_name: 'login.gov'
   enable_identity_verification: 'false'
   enable_rate_limiting: 'true'
@@ -281,6 +283,7 @@ test:
   database_timeout: '5000'
   database_username: ''
   dashboard_api_token: '123ABC'
+  disallow_all_web_crawlers: 'true'
   enable_identity_verification: 'true'
   enable_rate_limiting: 'true'
   enable_test_routes: 'true'
