--- a/config/country_dialing_codes.yml
+++ b/config/country_dialing_codes.yml
@@ -6,6 +6,14 @@ AF:
   name: Afghanistan
   country_code: '93'
   sms_only: true
+AG:
+  name: Antigua and Barbuda
+  country_code: '1268'
+  sms_only: true
+AI:
+  name: Anguilla
+  country_code: '1264'
+  sms_only: true
 AL:
   name: Albania
   country_code: '355'
@@ -38,9 +46,17 @@ AU:
   name: Australia/Cocos/Christmas Island
   country_code: '61'
   sms_only: true
+AS:
+  name: American Samoa
+  country_code: '1684'
+  sms_only: true
 AT:
   name: Austria
   country_code: '43'
+  sms_only: true
+AX:
+  name: Åland Islands
+  country_code: '358'
   sms_only: true
 AZ:
   name: Azerbaijan
@@ -82,6 +98,10 @@ BA:
   name: Bosnia and Herzegovina
   country_code: '387'
   sms_only: true
+BB:
+  name: Barbados
+  country_code: '1246'
+  sms_only: true
 BW:
   name: Botswana
   country_code: '267'
@@ -105,6 +125,18 @@ BF:
 BI:
   name: Burundi
   country_code: '257'
+  sms_only: true
+BL:
+  name: Saint Barthélemy
+  country_code: '590'
+  sms_only: true
+BM:
+  name: Bermuda
+  country_code: '1441'
+  sms_only: true
+BS:
+  name: Bahamas
+  country_code: '1242'
   sms_only: true
 KH:
   name: Cambodia
@@ -146,6 +178,10 @@ KM:
   name: Comoros
   country_code: '269'
   sms_only: true
+CC:
+  name: Cocos (Keeling) Islands
+  country_code: '61'
+  sms_only: true
 CG:
   name: Congo
   country_code: '242'
@@ -169,6 +205,14 @@ HR:
 CU:
   name: Cuba
   country_code: '53'
+  sms_only: true
+CW:
+  name: Curaçao
+  country_code: '599'
+  sms_only: true
+CX:
+  name: Christmas Island
+  country_code: '61'
   sms_only: true
 CY:
   name: Cyprus
@@ -262,6 +306,26 @@ DE:
   name: Germany
   country_code: '49'
   sms_only: true
+DO:
+  name: Dominican Republic (República Dominicana)
+  country_code: '1'
+  sms_only: true
+DO:
+  name: Dominica
+  country_code: '1767'
+  sms_only: true
+EH:
+  name: Western Sahara (‫الصحراء الغربية‬‎)
+  country_code: '212'
+  sms_only: true
+GD:
+  name: Grenada
+  country_code: '1473'
+  sms_only: true
+GG:
+  name: Guernsey
+  country_code: '44'
+  sms_only: true
 GH:
   name: Ghana
   country_code: '233'
@@ -289,6 +353,10 @@ GT:
 GN:
   name: Guinea
   country_code: '224'
+  sms_only: true
+GU:
+  name: Guam
+  country_code: '1671'
   sms_only: true
 GW:
   name: Guinea-Bissau
@@ -342,6 +410,10 @@ IL:
   name: Israel
   country_code: '972'
   sms_only: true
+IM:
+  name: Isle of Man
+  country_code: '44'
+  sms_only: true
 IT:
   name: Italy
   country_code: '39'
@@ -349,6 +421,14 @@ IT:
 CI:
   name: Ivory Coast
   country_code: '225'
+  sms_only: true
+JE:
+  name: Jersey
+  country_code: '44'
+  sms_only: true
+JM:
+  name: Jamaica
+  country_code: '1876'
   sms_only: true
 JP:
   name: Japan
@@ -366,6 +446,10 @@ KE:
   name: Kenya
   country_code: '254'
   sms_only: true
+KN:
+  name: Saint Kitts and Nevis
+  country_code: '1869'
+  sms_only: true
 KP:
   name: Korea (Democratic People's Republic of)
   country_code: '850'
@@ -377,6 +461,10 @@ KR:
 KW:
   name: Kuwait
   country_code: '965'
+  sms_only: true
+KY:
+  name: Cayman Islands
+  country_code: '1345'
   sms_only: true
 KG:
   name: Kyrgyzstan
@@ -393,6 +481,10 @@ LV:
 LB:
   name: Lebanon
   country_code: '961'
+  sms_only: true
+LC:
+  name: Saint Lucia
+  country_code: '1758'
   sms_only: true
 LS:
   name: Lesotho
@@ -497,6 +589,18 @@ ME:
 MA:
   name: Morocco
   country_code: '212'
+  sms_only: true
+MF:
+  name: Saint Martin (Saint-Martin (partie française))
+  country_code: '590'
+  sms_only: true
+MP:
+  name: Northern Mariana Islands
+  country_code: '1670'
+  sms_only: true
+MS:
+  name: Montserrat
+  country_code: '1664'
   sms_only: true
 MZ:
   name: Mozambique
@@ -690,6 +794,10 @@ SD:
   name: Sudan
   country_code: '249'
   sms_only: true
+SJ:
+  name: Svalbard and Jan Mayen
+  country_code: '47'
+  sms_only: true
 SR:
   name: Suriname
   country_code: '597'
@@ -709,6 +817,10 @@ CH:
 SY:
   name: Syria
   country_code: '963'
+  sms_only: true
+TC:
+  name: Turks and Caicos Islands
+  country_code: '1649'
   sms_only: true
 TW:
   name: Taiwan
@@ -746,6 +858,10 @@ TM:
   name: Turkmenistan
   country_code: '993'
   sms_only: true
+TT:
+  name: Trinidad and Tobago
+  country_code: '1868'
+  sms_only: true
 TV:
   name: Tuvalu
   country_code: '688'
@@ -774,6 +890,22 @@ UZ:
   name: Uzbekistan
   country_code: '998'
   sms_only: true
+VA:
+  name: Vatican City (Città del Vaticano)
+  country_code: '39'
+  sms_only: true
+VC:
+  name: Saint Vincent and the Grenadines
+  country_code: '1784'
+  sms_only: true
+VG:
+  name: Virgin Islands (British)
+  country_code: '1284'
+  sms_only: true
+VI:
+  name: Virgin Islands (U.S.)
+  country_code: '1340'
+  sms_only: false
 VU:
   name: Vanuatu
   country_code: '678'
@@ -786,14 +918,6 @@ VN:
   name: Vietnam
   country_code: '84'
   sms_only: true
-VG:
-  name: Virgin Islands (British)
-  country_code: '1'
-  sms_only: true
-VI:
-  name: Virgin Islands (U.S.)
-  country_code: '1'
-  sms_only: false
 YE:
   name: Yemen
   country_code: '967'
