Fix CircleCI build caching issue
**Why**:

CircleCI builds fail frequently with a missing dependency error
(EventMachine, specifically), as the fallback cache key finds a
build with any checksum and thus loads a prior failure,
requiring the 'Rebuild without cache' workaround.

**How**:

Removes the fallback key, and ensures that all Gemfile changes
generate a new cache (via the lock file's checksum).

This change leaves the front-end (NPM package) keys intact,
as we didn't appear to be experiencing any issues there.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,14 +30,13 @@ jobs:
 
       - restore-cache:
           keys:
-            - identity-idp-bundle-{{ checksum "Gemfile.lock" }}
-            - identity-idp-bundle-
+            - v2-identity-idp-bundle-{{ checksum "Gemfile.lock" }}
       - run:
           name: Install dependencies
           command: |
             bundle check || bundle install --deployment --jobs=4 --retry=3 --without deploy development doc production --path vendor/bundle
       - save-cache:
-          key: identity-idp-bundle-{{ checksum "Gemfile.lock" }}
+          key: v2-identity-idp-bundle-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
 
