--- a/config/agencies.yml
+++ b/config/agencies.yml
@@ -15,6 +15,8 @@ test:
     name: 'DHS'
   8:
     name: 'DOD'
+  9:
+    name: 'GSA'
 
 development:
   1:
@@ -33,6 +35,8 @@ development:
     name: 'USSS'
   8:
     name: 'DOD'
+  9:
+    name: 'GSA'
 
 production:
   1:
@@ -51,3 +55,5 @@ production:
     name: 'USSS'
   8:
     name: 'DOD'
+  9:
+    name: 'GSA'
