--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -660,3 +660,15 @@ production:
       - 'https://nr-1.fmcsa.dot.gov:443/nr-authentication/'
       - 'https://nr-1.fmcsa.dot.gov:443/nr-authentication/LoginHandler'
     restrict_to_deploy_env: 'prod'
+
+  # SAM – System for Award Management
+  'urn:gov:gsa:openidconnect.profiles:sp:sso:gsa:sam':
+    agency_id: 9
+    friendly_name: 'SAM'
+    agency: 'GSA'
+    logo: 'sam.png'
+    cert: 'sam_prod'
+    return_to_sp_url: 'https://sam.gov/portal/SAM'
+    redirect_uris:
+      - 'https://sam.gov/portal/SAM'
+    restrict_to_deploy_env: 'prod'
