Update .rubocop.yml and fix offenses
**Why**: Our Rubocop config mistakenly excluded the entire `spec`
directory. We want our specs to adhere to our Rubocop rules, and where
necessary, we can exclude individual specs.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,16 +10,14 @@ AllCops:
     - '**/Rakefile'
     - '**/Capfile'
   Exclude:
-    - 'db/schema.rb'
-    - 'node_modules/**/*'
-    - 'lib/rspec/user_flow_formatter.rb'
-    - 'lib/user_flow_exporter.rb'
-    - 'scripts/load_testing/*'
-    - 'spec/**/*'
-    - 'tmp/**/*'
     - 'bin/**/*'
     - 'db/migrate/*'
+    - 'db/schema.rb'
+    - 'lib/rspec/user_flow_formatter.rb'
     - 'lib/tasks/create_test_accounts.rb'
+    - 'lib/user_flow_exporter.rb'
+    - 'node_modules/**/*'
+    - 'tmp/**/*'
   TargetRubyVersion: 2.3
   TargetRailsVersion: 5.1
   UseCache: true
@@ -103,10 +101,13 @@ Metrics/ModuleLength:
 Metrics/ParameterLists:
   CountKeywordArgs: false
 
-# This is a Rails 5 feature, so it should be disabled until we upgrade
+Naming/VariableName:
+  Exclude:
+    - 'spec/services/pii/nist_encryption_spec.rb'
+
 Rails/HttpPositionalArguments:
   Description: 'Use keyword arguments instead of positional arguments in http method calls.'
-  Enabled: false
+  Enabled: true
   Include:
     - 'spec/**/*'
     - 'test/**/*'
