--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -671,4 +671,17 @@ production:
     return_to_sp_url: 'https://sam.gov/portal/SAM'
     redirect_uris:
       - 'https://sam.gov/portal/SAM'
+      - 'https://www.sam.gov/portal/SAM'
+    restrict_to_deploy_env: 'prod'
+
+  # SAM – System for Award Management / testing prod from UAT
+  'urn:gov:gsa:openidconnect.profiles:sp:sso:gsa:sam_uat':
+    agency_id: 9
+    friendly_name: 'SAM - UAT'
+    agency: 'GSA'
+    logo: 'sam.png'
+    cert: 'sam_prod'
+    return_to_sp_url: 'https://uat.sam.gov/portal/SAM'
+    redirect_uris:
+      - 'https://uat.sam.gov/portal/SAM'
     restrict_to_deploy_env: 'prod'
