LG-376 Add DOE / Fossil Energy SP to production
**Why**: Integration testing is complete and they are ready to go to production.

**How**: Update service_providers.yml, add cert and logo, create a new agency (DOE)

--- a/config/agencies.yml
+++ b/config/agencies.yml
@@ -17,6 +17,8 @@ test:
     name: 'DOD'
   9:
     name: 'GSA'
+  10:
+    name: 'DOE'
 
 development:
   1:
@@ -37,6 +39,8 @@ development:
     name: 'DOD'
   9:
     name: 'GSA'
+  10:
+    name: 'DOE'
 
 production:
   1:
@@ -57,3 +61,5 @@ production:
     name: 'DOD'
   9:
     name: 'GSA'
+  10:
+    name: 'DOE'
