[LG-256] Add spinner when presenting piv/cac cert
**Why**:
The browser UX might take a while, and we don't want the
user to feel that everything is frozen up.

**How**:
When the user clicks on the button to present their piv/cac
cert, we intercept the event and change the content to be a
GIF spinner. We let the event continue so the browser follows
through with the request.

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -103,6 +103,7 @@ ignore_unused:
   - 'devise.two_factor_authentication.max_otp_login_attempts_reached'
   - 'devise.two_factor_authentication.max_otp_requests_reached'
   - 'devise.two_factor_authentication.max_personal_key_login_attempts_reached'
+  - 'devise.two_factor_authentication.max_piv_cac_login_attempts_reached'
   - 'devise.two_factor_authentication.phone_sms_info_html'
   - 'devise.two_factor_authentication.phone_sms_label'
   - 'devise.two_factor_authentication.phone_voice_info_html'
