--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -90,6 +90,7 @@ plugins:
 exclude_patterns:
   - 'db/schema.rb'
   - 'node_modules/'
+  - 'lib/proofer_mocks/'
   - 'lib/rspec/formatters/user_flow_formatter.rb'
   - 'lib/tasks/create_test_accounts.rb'
   - 'lib/user_flow_exporter.rb'
