Add authentication to usps_upload endpoint

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -189,6 +189,7 @@ development:
   usps_upload_sftp_host: 'example.com'
   usps_upload_sftp_username: 'user'
   usps_upload_sftp_password: 'pass'
+  usps_upload_token: '123ABC'
 
 # These values serve as defaults for all production-like environments, which
 # includes *.identitysandbox.gov and *.login.gov.
@@ -303,6 +304,7 @@ production:
   usps_upload_sftp_host:
   usps_upload_sftp_username:
   usps_upload_sftp_password:
+  usps_upload_token:
 
 test:
   aamva_cert_enabled: 'true'
@@ -417,3 +419,4 @@ test:
   usps_upload_sftp_host: 'example.com'
   usps_upload_sftp_username: 'user'
   usps_upload_sftp_password: 'pass'
+  usps_upload_token: 'test_token'
