--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -67,6 +67,7 @@ Metrics/ClassLength:
   - app/decorators/user_decorator.rb
   - app/services/analytics.rb
   - app/services/idv/session.rb
+  - app/presenters/two_factor_auth_code/phone_delivery_presenter.rb
 
 Metrics/LineLength:
   Description: Limit lines to 100 characters.
