--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -74,6 +74,10 @@ development:
   aamva_public_key: '123abc'
   aamva_private_key: '123abc'
   aamva_verification_url: 'https://example.org:12345/verification/url'
+  account_reset_auth_token: 'abc123'
+  account_reset_enabled: 'true'
+  account_reset_token_valid_for_days: '1'
+  account_reset_wait_period_days: '1'
   async_job_refresh_interval_seconds: '5'
   async_job_refresh_max_wait_seconds: '15'
   attribute_cost: '4000$8$4$' # SCrypt::Engine.calibrate(max_time: 0.5)
@@ -203,6 +207,10 @@ production:
   aamva_public_key: # Base64 encoded public key for AAMVA
   aamva_private_key: # Base64 encoded private key for AAMVA
   aamva_verification_url: # DLDV Verification URL
+  account_reset_auth_token:
+  account_reset_enabled: 'true'
+  account_reset_token_valid_for_days: '1'
+  account_reset_wait_period_days: '1'
   async_job_refresh_interval_seconds: '5'
   async_job_refresh_max_wait_seconds: '15'
   attribute_cost: '4000$8$4$' # SCrypt::Engine.calibrate(max_time: 0.5)
@@ -311,6 +319,10 @@ test:
   aamva_public_key: '123abc'
   aamva_private_key: '123abc'
   aamva_verification_url: 'https://example.org:12345/verification/url'
+  account_reset_auth_token: 'test'
+  account_reset_enabled: 'true'
+  account_reset_token_valid_for_days: '1'
+  account_reset_wait_period_days: '1'
   async_job_refresh_interval_seconds: '1'
   async_job_refresh_max_wait_seconds: '15'
   attribute_cost: '800$8$1$' # SCrypt::Engine.calibrate(max_time: 0.01)
