--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -182,6 +182,8 @@ development:
   twilio_numbers: '["9999999999","2222222222"]'
   twilio_sid: 'sid1'
   twilio_auth_token: 'token1'
+  twilio_http_basic_auth_username: '' # Twilio console configure Request URL
+  twilio_http_basic_auth_password: '' # https://www.twilio.com/docs/usage/security
   twilio_messaging_service_sid: '123abc'
   twilio_record_voice: 'true'
   use_dashboard_service_providers: 'true'
@@ -302,6 +304,8 @@ production:
   twilio_numbers: # Add JSON encoded array of phone numbers
   twilio_sid: # Twilio SID
   twilio_auth_token: # Twilio auth token
+  twilio_http_basic_auth_username: '' # Twilio console configure Request URL
+  twilio_http_basic_auth_password: '' # https://www.twilio.com/docs/usage/security
   twilio_messaging_service_sid: # Twilio CoPilot SID
   twilio_record_voice: 'false'
   twilio_verify_api_key: 'change-me'
@@ -422,6 +426,8 @@ test:
   twilio_numbers: '["9999999999","2222222222"]'
   twilio_sid: 'sid1'
   twilio_auth_token: 'token1'
+  twilio_http_basic_auth_username: '' # Twilio console configure Request URL
+  twilio_http_basic_auth_password: '' # https://www.twilio.com/docs/usage/security
   twilio_messaging_service_sid: '123abc'
   twilio_record_voice: 'true'
   twilio_verify_api_key: 'secret'
