LG-437 Create MyCBP service provider
**Why**: MyCBP is ready for production

**How**: Update service_providers.yml and assets dir with logo

--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -706,3 +706,14 @@ production:
       - 'https://fossil.energy.gov/fergas-fe/#/login_redirect'
       - 'https://fossil.energy.gov/fergas-fe/#/notice/15'
     restrict_to_deploy_env: 'prod'
+
+  # MY CBP
+  'urn:gov:dhs.cbp.opa.mycbp:openidconnect:prod':
+    agency_id: 1
+    friendly_name: 'MyCBP'
+    agency: 'DHS'
+    logo: 'mycbp.png'
+    return_to_sp_url: 'gov.dhs.cbp.opa.mycbp://result'
+    redirect_uris:
+      - 'gov.dhs.cbp.opa.mycbp://result'
+    restrict_to_deploy_env: 'prod'
