--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -67,7 +67,7 @@ plugins:
     - '.codeclimate.yml'
     config:
       strings:
-      # Removed TODO from this list, as we want to allow TODOs in the codebase
+      - TODO
       - FIXME
       - HACK
       - BUG
