--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -277,6 +277,7 @@ production:
   piv_cac_agencies: '["DOD"]'
   piv_cac_enabled: 'false'
   pkcs11_lib: '/opt/cloudhsm/lib/libcloudhsm_pkcs11.so'
+  programmable_sms_countries: 'US,CA'
   proofer_mock_fallback: 'true'
   reauthn_window: '120'
   recaptcha_enabled_percent: '0'
@@ -401,6 +402,7 @@ test:
   piv_cac_verify_token_url: 'https://localhost:8443/'
   pkcs11_lib: '/opt/cloudhsm/lib/libcloudhsm_pkcs11.so'
   proofer_mock_fallback: 'true'
+  programmable_sms_countries: 'US,CA'
   reauthn_window: '120'
   recaptcha_enabled_percent: '0'
   recaptcha_site_key: 'key1'
