--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -138,6 +138,8 @@ Rails/TimeZone:
   SupportedStyles:
     - strict
     - flexible
+  Exclude:
+    - 'lib/lambdas/account_reset_lambda.rb'
 
 Layout/AlignParameters:
   # Alignment of parameters in multi-line method calls.
