--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -273,7 +273,7 @@ production:
   participate_in_dap: 'false' # pair with google_analytics_key
   password_pepper: # generate via `rake secret`
   password_strength_enabled: 'true'
-  piv_cac_agencies: '["DOD"]'
+  piv_cac_agencies: '["DOD","NGA","EOP"]'
   piv_cac_enabled: 'false'
   pkcs11_lib: '/opt/cloudhsm/lib/libcloudhsm_pkcs11.so'
   programmable_sms_countries: 'US,CA,MX'
