LG-492 Add Forest Service ePermits to the production service providers
**Why**: Forest Service ePermits has completed integration testing and is ready to be promoted to production.

**How**: Update service_providers.yml, create a new agency, and add the public certificate

--- a/config/agencies.yml
+++ b/config/agencies.yml
@@ -19,6 +19,8 @@ test:
     name: 'GSA'
   10:
     name: 'DOE'
+  11:
+    name: 'USFS'
 
 development:
   1:
@@ -41,6 +43,8 @@ development:
     name: 'GSA'
   10:
     name: 'DOE'
+  11:
+    name: 'USFS'
 
 production:
   1:
@@ -63,3 +67,5 @@ production:
     name: 'GSA'
   10:
     name: 'DOE'
+  11:
+    name: 'USFS'
