Refactor SP redirect URI validation
**Why**: To remove redundant validations and keep things consistent
with the use of form validators. Before, the flow was as follows:

1. SP makes OIDC request

2. IdP OIDC Authorization Controller validates the request by asking
`OpenidConnectAuthorizeForm` if it is valid. Part of that validation
was to ask `OpenidConnectRedirector` if the `redirect_uri` is valid.

3. Whether or not the Form is valid, it returns a `FormResponse`
object on which you can call `.extra[:redirect_uri]` whose value is
calculated by invoking `OpenidConnectRedirector` again to obtain either
the `success_redirect_uri` or the `error_redirect_uri`, both of which
go through the same initial validation of the `redirect_uri`.

4. The `apply_secure_headers_override` `before_action` is called, and
it too validates the `redirect_uri` yet again before adding it to
`form_action`.

5. User fully authenticates

6. The AuthorizationController is called once again, and the form gets
validated again (this is expected)

7. When we're ready to redirect back to the SP, we determine which
URI to use based on `OpenidConnectAuthorizeForm#success_redirect_uri`,
which again goes through `OpenidConnectRedirector` to validate the URI
that was just validated less than a second ago.

**How**:
- Replace `OpenidConnectRedirector` with `RedirectUriValidator` and
make it only responsible for validating the URI.
- Move the URI construction that used to be in `OpenidConnectRedirector`
into the Form Objects that used to call it.
- Simplify the validation logic to look for an exact match since we
require agencies to specify which URIs they want us to redirect to

This eliminates 4 redundant validations.

--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -47,6 +47,7 @@ test:
   'urn:gov:gsa:openidconnect:test':
     redirect_uris:
       - 'gov.gsa.openidconnect.test://result'
+      - 'gov.gsa.openidconnect.test://result/logout'
     cert: 'saml_test_sp'
     friendly_name: 'Example iOS App'
     agency: '18F'
@@ -57,7 +58,7 @@ test:
   'urn:gov:gsa:openidconnect:sp:server':
     agency_id: 2
     redirect_uris:
-      - 'http://localhost:7654/'
+      - 'http://localhost:7654/auth/result'
       - 'https://example.com'
     cert: 'saml_test_sp'
     friendly_name: 'Test SP'
@@ -632,7 +633,7 @@ production:
     attribute_bundle:
       - x509_subject
       - x509_presented
-  
+
   # My Move.mil
   'urn:gov:gsa:openidconnect.profiles:sp:sso:dod:mymovemilprod':
     agency_id: 8
