--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,8 @@ Vagrantfile
 /.tmp/
 /vendor/bundle
 
+saml_*.txt
+
 # This is a hack to keep the files that are added to the repo and to prevent git from worrying about
 # new (transient) files that may be created in those dirs.
 /config/deploy/*.rb
