--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -23,6 +23,7 @@ test:
     assertion_consumer_logout_service_url: 'http://example.com/test/saml/decode_slo_request'
     block_encryption: 'aes256-cbc'
     sp_initiated_login_url: 'https://example.com/auth/saml/login'
+    failure_to_proof_url: 'https://example.com/'
     friendly_name: 'Test SP'
     cert: 'saml_test_sp'
     logo: 'generic.svg'
