LG-508 Add client-side Crockford Base32 encoding helper
**Why**: Personal key confirmation modal lacks
conversion helper present in server-side code.

**How**: Add corresponding client-side code to
coerce mistakenly read characters into their
Crockford Base32 equivalents.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@rails/webpacker": "^3.5.5",
+    "base32-crockford-browser": "^1.0.0",
     "basscss-sass": "^3.0.0",
     "classlist.js": "^1.1.20150312",
     "clipboard": "^1.6.1",
