--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -408,6 +408,7 @@ production:
     logo: 'cbp.png'
     redirect_uris:
       - 'gov.dhs.cbp.pspd.oars.user.prod://result'
+      - 'gov.dhs.cbp.pspd.oars.user.prod://result/logout'
     restrict_to_deploy_env: 'prod'
 
   # CBP I'm Ready
