--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ Vagrantfile
 /vendor/bundle
 
 saml_*.txt
+saml_*.shr
 
 # This is a hack to keep the files that are added to the repo and to prevent git from worrying about
 # new (transient) files that may be created in those dirs.
