LG-518 Identity Verification with Document Authentication and Selfie Matching
**Why**: To enhance the security of the identity verification services we offer.

**How**: Interface to external vendors to verify document authenticity and selfie matching.  Perform resolution on the document PII along with a user supplied ssn and phone number.  Provide options to replace the existing LOA3 flow or allow both to coexist so doc auth can be tested by manually entering the path /verify/doc_auth in the browser.  Create a new framework that automatically implements our coding guidelines, minimizes the code we write, and seamlessly manages session state via a state machine with pluggable flows and steps.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -78,6 +78,12 @@ development:
   aamva_public_key: '123abc'
   aamva_private_key: '123abc'
   aamva_verification_url: 'https://example.org:12345/verification/url'
+  acuant_assure_id_subscription_id: ''
+  acuant_assure_id_username: ''
+  acuant_assure_id_password: ''
+  acuant_assure_id_url: ''
+  acuant_facial_match_license_key: ''
+  acuant_facial_match_url: ''
   account_reset_auth_token: 'abc123'
   account_reset_enabled: 'true'
   account_reset_token_valid_for_days: '1'
@@ -109,6 +115,8 @@ development:
   database_timeout: '5000'
   database_username: ''
   disallow_all_web_crawlers: 'true'
+  doc_auth_enabled: 'false'
+  doc_auth_exclusive: 'false'
   domain_name: 'localhost:3000'
   enable_identity_verification: 'true'
   enable_rate_limiting: 'false'
@@ -204,6 +212,12 @@ production:
   account_reset_enabled: 'true'
   account_reset_token_valid_for_days: '1'
   account_reset_wait_period_days: '1'
+  acuant_assure_id_subscription_id: ''
+  acuant_assure_id_username: ''
+  acuant_assure_id_password: ''
+  acuant_assure_id_url: ''
+  acuant_facial_match_license_key: ''
+  acuant_facial_match_url: ''
   async_job_refresh_interval_seconds: '5'
   async_job_refresh_max_wait_seconds: '15'
   attribute_cost: '4000$8$4$' # SCrypt::Engine.calibrate(max_time: 0.5)
@@ -223,6 +237,8 @@ production:
   dashboard_api_token:
   database_statement_timeout: '2500'
   disallow_all_web_crawlers: 'false'
+  doc_auth_enabled: 'false'
+  doc_auth_exclusive: 'false'
   domain_name: 'login.gov'
   enable_identity_verification: 'false'
   enable_rate_limiting: 'true'
@@ -312,6 +328,12 @@ test:
   account_reset_enabled: 'true'
   account_reset_token_valid_for_days: '1'
   account_reset_wait_period_days: '1'
+  acuant_assure_id_subscription_id: ''
+  acuant_assure_id_username: ''
+  acuant_assure_id_password: ''
+  acuant_assure_id_url: 'https://example.com'
+  acuant_facial_match_license_key: ''
+  acuant_facial_match_url: 'https://example.com'
   async_job_refresh_interval_seconds: '1'
   async_job_refresh_max_wait_seconds: '15'
   attribute_cost: '800$8$1$' # SCrypt::Engine.calibrate(max_time: 0.01)
@@ -339,6 +361,8 @@ test:
   database_username: ''
   dashboard_api_token: '123ABC'
   disallow_all_web_crawlers: 'true'
+  doc_auth_enabled: 'true'
+  doc_auth_exclusive: 'false'
   enable_identity_verification: 'true'
   enable_rate_limiting: 'true'
   enable_test_routes: 'true'
