[LG-487] Scope piv/cac push by SP/email
**Why**:
We want to manage our rollout of PIV/CAC support.
We want people able to configure piv/cac during account
creation if they are at the right SP with the right
email domain.

**How**:
Pass the user through the service provider check.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -255,6 +255,7 @@ production:
   password_pepper: # generate via `rake secret`
   password_strength_enabled: 'true'
   piv_cac_agencies: '["DOD","NGA","EOP"]'
+  piv_cac_agencies_scoped_by_email: '["GSA"]'
   piv_cac_email_domains: '[".mil"]'
   piv_cac_enabled: 'false'
   pkcs11_lib: '/opt/cloudhsm/lib/libcloudhsm_pkcs11.so'
