LG-646 Add CBP I-94 SP
**Why**: The SP has completed integration testing and is ready to be promoted to production

**How**: Update the service_providers.yml file.

--- a/config/agencies.yml
+++ b/config/agencies.yml
@@ -1,6 +1,6 @@
 test:
   1:
-    name: 'CBP'
+    name: 'DHS'
   2:
     name: 'OPM'
   3:
@@ -12,7 +12,7 @@ test:
   6:
     name: 'DOT'
   7:
-    name: 'DHS'
+    name: 'USSS'
   8:
     name: 'DOD'
   9:
@@ -24,7 +24,7 @@ test:
 
 development:
   1:
-    name: 'CBP'
+    name: 'DHS'
   2:
     name: 'OPM'
   3:
@@ -48,7 +48,7 @@ development:
 
 production:
   1:
-    name: 'CBP'
+    name: 'DHS'
   2:
     name: 'OPM'
   3:
