LG-601 Allow a user to add a new webauthn configuration
**Why**: So we can support strong authentication via hardware security keys as a new 2FA option

**How**: Generate a challenge on the server side.   Use the Credential Manager API (navigator.credentials.create) to ask the browser to generate a new credential.  After obtaining user consent, get the public_key and signed attestation and forward it to the server along with a name supplied by the user.  Use the webauthn gem to verify the credentials.  Upon success, store the credential id, public_key, and name in the db as a new webauthn_configuration.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -188,6 +188,7 @@ development:
   usps_upload_sftp_username: 'brady'
   usps_upload_sftp_password: 'test'
   usps_upload_token: '123ABC'
+  webauthn_enabled: true
 
 # These values serve as defaults for all production-like environments, which
 # includes *.identitysandbox.gov and *.login.gov.
@@ -299,6 +300,7 @@ production:
   usps_upload_sftp_username:
   usps_upload_sftp_password:
   usps_upload_token:
+  webauthn_enabled: false
 
 test:
   aamva_cert_enabled: 'true'
@@ -414,3 +416,4 @@ test:
   usps_upload_sftp_username: 'user'
   usps_upload_sftp_password: 'pass'
   usps_upload_token: 'test_token'
+  webauthn_enabled: true
