Revert removal of #2351 (redirect uri validation)
This reverts commit a14b8905e6e33dfd337a9a037165dd2c1604ffcd.

We reverted #2351 over a month ago to give agencies a chance to provide
their logout redirect URIs. We gave them a deadline of August 23, which
has passed two weeks ago.

--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -48,6 +48,7 @@ test:
   'urn:gov:gsa:openidconnect:test':
     redirect_uris:
       - 'gov.gsa.openidconnect.test://result'
+      - 'gov.gsa.openidconnect.test://result/logout'
     cert: 'saml_test_sp'
     friendly_name: 'Example iOS App'
     agency: '18F'
@@ -58,7 +59,7 @@ test:
   'urn:gov:gsa:openidconnect:sp:server':
     agency_id: 2
     redirect_uris:
-      - 'http://localhost:7654/'
+      - 'http://localhost:7654/auth/result'
       - 'https://example.com'
     cert: 'saml_test_sp'
     friendly_name: 'Test SP'
