LG-599 LG-603 Allow user to config webauthn at account creation. Allow user to use webauthn for 2FA.
Why: So we can support strong authentication via hardware security keys as a new 2FA option

How: Generate a challenge on the server side and present the browser with a list of credentials that are registered to the user. Use the Credential Manager API (navigator.credentials.get) to ask the browser to sign the challenge if the authenticator contains one of the given credentials and the user gives consent.  The web page then automatically submits the form with the signed assertion for the server to verify. Use the webauthn gem to verify the assertion response. Upon success the user is authenticated.

--- a/.reek.yml
+++ b/.reek.yml
@@ -91,6 +91,7 @@ detectors:
       - CloudhsmKeyGenerator
       - CloudhsmKeySharer
       - WebauthnSetupForm
+      - WebauthnVerificationForm
   TooManyStatements:
     max_statements: 6
     exclude:
