--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -192,7 +192,7 @@ development:
   usps_upload_sftp_username: 'brady'
   usps_upload_sftp_password: 'test'
   usps_upload_token: '123ABC'
-  webauthn_enabled: true
+  webauthn_enabled: 'true'
 
 # These values serve as defaults for all production-like environments, which
 # includes *.identitysandbox.gov and *.login.gov.
@@ -304,7 +304,7 @@ production:
   usps_upload_sftp_username:
   usps_upload_sftp_password:
   usps_upload_token:
-  webauthn_enabled: false
+  webauthn_enabled: 'false'
 
 test:
   aamva_cert_enabled: 'true'
@@ -420,4 +420,4 @@ test:
   usps_upload_sftp_username: 'user'
   usps_upload_sftp_password: 'pass'
   usps_upload_token: 'test_token'
-  webauthn_enabled: true
+  webauthn_enabled: 'true'
