--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -264,7 +264,7 @@ production:
     redirect_uris:
       - 'http://localhost:9292/auth/result'
       <% if LoginGov::Hostdata.in_datacenter? %>
-      - 'https://sp-oidc-sinatra.<%= LoginGov::Hostdata.env %>.<%= LoginGov::Hostdata.domain %>/'
+      - 'https://sp-oidc-sinatra.<%= LoginGov::Hostdata.env %>.<%= LoginGov::Hostdata.domain %>/auth/result'
       <% end %>
 
   'urn:gov:gsa:openidconnect:sp:expressjs':
