LG-515 Move 2FA localizations out of Devise file
**Why**: The Devise locale folder is for Devise-specific strings. None
of the strings we had under the `two_factor_authentication` section
were related to Devise. We have a separate folder for 2FA localizations:
`config/locales/two_factor_authentication`

**How**:
- Cut and paste anything under `devise.two_factor_authentication`
into the `two_factor_authentication` folder
- Run `make normalize_yaml`
- Do a search and replace for `devise.two_factor_authentication` with
`two_factor_authentication`

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -96,21 +96,21 @@ ignore_unused:
   - 'devise.mailer.confirmation_instructions.subject'
   - 'devise.mailer.reset_password_instructions.subject'
   - 'devise.sessions.signed_in'
-  - 'devise.two_factor_authentication.invalid_otp'
-  - 'devise.two_factor_authentication.invalid_personal_key'
-  - 'devise.two_factor_authentication.invalid_piv_cac'
-  - 'devise.two_factor_authentication.max_generic_login_attempts_reached'
-  - 'devise.two_factor_authentication.max_otp_login_attempts_reached'
-  - 'devise.two_factor_authentication.max_otp_requests_reached'
-  - 'devise.two_factor_authentication.max_personal_key_login_attempts_reached'
-  - 'devise.two_factor_authentication.max_piv_cac_login_attempts_reached'
-  - 'devise.two_factor_authentication.phone_sms_info_html'
-  - 'devise.two_factor_authentication.phone_sms_label'
-  - 'devise.two_factor_authentication.phone_voice_info_html'
-  - 'devise.two_factor_authentication.phone_voice_label'
-  - 'devise.two_factor_authentication.please_try_again_html'
-  - 'devise.two_factor_authentication.read_about_two_factor_authentication.link'
-  - 'devise.two_factor_authentication.read_about_two_factor_authentication.text_html'
+  - 'two_factor_authentication.invalid_otp'
+  - 'two_factor_authentication.invalid_personal_key'
+  - 'two_factor_authentication.invalid_piv_cac'
+  - 'two_factor_authentication.max_generic_login_attempts_reached'
+  - 'two_factor_authentication.max_otp_login_attempts_reached'
+  - 'two_factor_authentication.max_otp_requests_reached'
+  - 'two_factor_authentication.max_personal_key_login_attempts_reached'
+  - 'two_factor_authentication.max_piv_cac_login_attempts_reached'
+  - 'two_factor_authentication.phone_sms_info_html'
+  - 'two_factor_authentication.phone_sms_label'
+  - 'two_factor_authentication.phone_voice_info_html'
+  - 'two_factor_authentication.phone_voice_label'
+  - 'two_factor_authentication.please_try_again_html'
+  - 'two_factor_authentication.read_about_two_factor_authentication.link'
+  - 'two_factor_authentication.read_about_two_factor_authentication.text_html'
   - 'errors.messages.*'
   - 'forms.piv_cac_setup.*'
   - 'headings.piv_cac_setup.*'
