--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -41,7 +41,7 @@ queue_health_check_dead_interval_seconds: '60'
 queue_health_check_frequency_seconds: '30'
 
 # Configuration to probabilistically select the config.active_job.queue_adapter
-# Currently known options are: sidekiq, async, inline
+# Currently known options are: async, inline
 queue_adapter_weights: '{"inline": 1}'
 
 # The number of words in the personal key phrase
@@ -103,7 +103,6 @@ development:
   database_name: ''
   database_password: ''
   database_pool_idp: '5'
-  database_pool_worker: '5'
   database_readonly_password: ''
   database_readonly_username: ''
   database_statement_timeout: '2500'
@@ -335,7 +334,6 @@ test:
   database_name: ''
   database_password: ''
   database_pool_idp:
-  database_pool_worker:
   database_readonly_password: ''
   database_readonly_username: ''
   database_statement_timeout: '2500'
