LG-730 Add the Homes.mil Service Provider to production (#2580)
**Why**: Homes.mil has completed integration testing and is ready to be promoted to production

**How**: Update service_providers.yml and add cert

--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -810,3 +810,17 @@ production:
     attribute_bundle:
       - email
     restrict_to_deploy_env: 'prod'
+
+  # HOMES.mil
+  'urn:gov:gsa:openidconnect:profiles:sp:sso:cnic:HOMES':
+    agency_id: 8
+    friendly_name: 'HOMES.mil'
+    agency: 'DOD'
+    logo: 'homes_mil.png'
+    return_to_sp_url: 'https://www.homes.mil/homes/DispatchServlet/HomesLogin'
+    redirect_uris:
+      - 'https://www.homes.mil/homes/DispatchServlet/HomesLogin'
+    cert: 'homes_mil_prod'
+    attribute_bundle:
+      - email
+    restrict_to_deploy_env: 'prod'
