--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -824,3 +824,16 @@ production:
     attribute_bundle:
       - email
     restrict_to_deploy_env: 'prod'
+
+  # Pre-mod SAM – System for Award Management
+  'urn:gov:gsa:openidconnect.profiles:sp:sso:gsa:pmsam':
+    agency_id: 9
+    friendly_name: 'SAM'
+    agency: 'GSA'
+    logo: 'sam.png'
+    cert: 'sam_prod'
+    return_to_sp_url: 'https://sam.gov/SAM'
+    redirect_uris:
+      - 'https://sam.gov/SAM'
+      - 'https://www.sam.gov/SAM'
+    restrict_to_deploy_env: 'prod'
