LG-772 Add SEC Rule 19D-1 SP to production
**Why**: SEC has completed integration testing and is ready to be promoted to production.

**How**: Update service_providers.yml add cert and logo.

--- a/config/agencies.yml
+++ b/config/agencies.yml
@@ -23,6 +23,8 @@ test:
     name: 'USFS'
   12:
     name: 'HUD'
+  13:
+    name: 'SEC'
 
 development:
   1:
@@ -49,6 +51,8 @@ development:
     name: 'USFS'
   12:
     name: 'HUD'
+  13:
+    name: 'SEC'
 
 production:
   1:
@@ -75,3 +79,5 @@ production:
     name: 'USFS'
   12:
     name: 'HUD'
+  13:
+    name: 'SEC'
