--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -86,6 +86,9 @@ plugins:
     channel: rubocop-0-58
   scss-lint:
     enabled: true
+    checks:
+      HexLength:
+        enabled: false
 
 exclude_patterns:
   - 'db/schema.rb'
